Ditching fixed navbar, more readable picture counts

--- a/public/css/davinci.css
+++ b/public/css/davinci.css
@@ -1,4 +1,4 @@
-body { background-color: #222; padding-top: 60px; }
+body { background-color: #222; }
 
 .navbar { border-radius: 0px; margin-bottom: 5px; }
 input#search-box { width: 400px; }
@@ -8,7 +8,7 @@ div#grid-view div#pic-view img { position: absolute; top: 0px; left: 0px; paddin
 
 div.event-grid { position: relative; float: left; width: 220px; height: 300px; margin: 10px; }
 div.event-grid img { box-shadow: 0px 0px 10px 2px #000; }
-div.event-grid small { position: absolute; top: 5px; right: 5px; z-index: 100; color: #ccc; background-color: #222; opacity: 0.70; padding: 2px; font-weight: bold; border-radius: 3px; }
+div.event-grid small { position: absolute; top: 5px; right: 5px; z-index: 100; color: #eee; background-color: #000; opacity: 0.65; padding: 3px; font-weight: bold; border-radius: 3px; }
 div.event-grid img:hover { cursor: pointer; box-shadow: 0px 0px 10px 1px #777; }
 div.event-grid h5 { color: #DBDBDB; text-shadow: 1px 1px 5px #000; text-align: center; line-height: 20px; }
 
